--- a/package.json
+++ b/package.json
@@ -34,8 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-plugin-react": "^7.20.5"
-  }
+  "devDependencies": {}
 }
