--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
+    "react-typist": "^2.0.5",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   },
