--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
-name: 'My Workflow'
+name: "My Workflow"
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   deploy:
-    name: 'Deploy to Netlify'
-      runs-on: ubuntu-latest
+    name: "Deploy to Netlify"
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
