--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+      - name: Install dependencies
+        run: npm install
       - uses: jsmrcaga/action-netlify-deploy@v1.1.0
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH }}
