--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v1
       - name: Install dependencies
         run: npm install
+      - name: start local
+        run: npm start
       - name: file structure
         run: tree
       - uses: jsmrcaga/action-netlify-deploy@v1.1.0
