--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,3 @@
-
 {
     "branches": "master",
     "plugins": [
@@ -15,7 +14,7 @@
       [
         "@semantic-release/git",
         {
-          "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
+          "assets": ["package.json", "package-lock.json", "CHANGELOG.md"]
         }
       ]
     ]
