--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,38 @@
-name: "My Workflow"
+name: "CI"
 
 on:
   push:
     branches: [master]
 
 jobs:
-  deploy:
+  Release & deploy:
     name: "Deploy to Netlify"
     runs-on: ubuntu-latest
-
     steps:
+
       - uses: actions/checkout@v2
+
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:   
+          node-version: '12'
+
       - name: Install dependencies
         run: npm install
-      - name: file structure
-        run: tree
+
+      - name: build
+        run: npm run build
+
+      - name: install semantic dependencies
+        run: npm i -g semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/github @semantic-release/git
+
+      - name: Release
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: jsmrcaga/action-netlify-deploy@v1.1.0
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH }}
           NETLIFY_SITE_ID: 16382a7f-99d3-4da5-8786-90709568fd63
+          NETLIFY_DEPLOY_TO_PROD: true
