--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: "CI"
 
-on:
-  push:
-    branches: [master]
+on: workflow_dispatch
+#   push:
+#     branches: [master]
 
 jobs:
   Release-deploy:
